Tue Nov 20 08:36:15 2012  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* signal.c (sig_signame): implements Signal.signame method
	[Feature #5613]
	* test/ruby/test_signal.rb (test_signame): adds test for above
	* NEWS: add an item about above

Mon Nov 19 16:30:59 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* struct.c (rb_struct_each_pair): yield associated pairs so that
	  an unsplat argument can get both, for consistency with Hash,
	  OpenStruct, and etc.  [ruby-dev:46533] [Bug #7382]

Mon Nov 19 16:17:53 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LIBS): libelf is need on only FreeBSD.

Mon Nov 19 16:08:10 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (RUBYLIB): purelib option in runruby.rb is deprecated
	  since r28841, so set to an empty list to get rid of a bogus path in
	  child processes, which caused an insecure operation exception in
	  test/ruby/test_encoding.rb:test_unsafe.

Mon Nov 19 15:40:50 2012  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* .travis.yml (script): add OPTS=-v, requested by @_ko1.

Mon Nov 19 15:09:07 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: fix didn't enable_dtrace=yes on auto.

	* configure.in: see enable_dtrace for adding libelf on FreeBSD.

	* common.mk: VPATH is not needed.

Mon Nov 19 14:55:51 2012  Koichi Sasada  <ko1@atdot.net>

	* thread.c: add `Thread#backtrace_locations' method.
	  This method is similart to `caller_locations' method for
	  specific method.
	  And fix to accept `level' and `n' parameters for `Thread#backtrace'
	  and `Thread#backtrace_locations'.
	  `caller' (and `caller_locations') do not return `caller' method
	  frame.
	  However, `Thread#backtrace' (and `Thread#backtrace_locations')
	  return `Thread#backtrace' method frame itself
	  if `Thread.current.backtrace' was called.

	* vm_backtrace.c: ditto.

	* internal.h: ditto.

	* test/ruby/test_backtrace.rb: add tests.

Mon Nov 19 14:54:32 2012  NAKAMURA Usaku  <usa@ruby-lang.org>
